apps/core/zitadel/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: zitadel
  labels:
    gateway-access: "true"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
