apps/core/zitadel/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zitadel
  namespace: zitadel
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab
      namespace: gateway
      sectionName: https-hl
  hostnames:
    - id.hl.mkoelle.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: zitadel
          port: 8080
          weight: 1
